--- a/ovip-0001.mediawiki
+++ b/ovip-0001.mediawiki
@@ -28,25 +28,27 @@ There are four kinds of OVIPs:
 * Technical Clearification: Descripe cross-implementation technical details which do not imply a change to the current standard, but rather fill gaps of undefined details which leave room for interpretation and could impact interoperability.
 * Standard: Descripe additions or changes to the current standard. These OVIPs that change the protocol by adding or changing existing functionality.
 * Testing: Descripe a single or multiple test-suites that an OpenVASP client implementation has to pass in order to ensure interoperability.
-* Process: Descripes changes to OpenVASP processes. These OVIPs should not change the protocal itself.
+* Process: Descripes changes to OpenVASP processes. These OVIPs should not change the protocol itself.
 
 ==OVIP Work Flow==
 
 The OVIP process should consist of three phases:
 
-1. Community discussion. Discussing an idea publicly in the OpenVASP discussion group is a good way to get a sense of acceptance and relevance of the idea. It is highly recommended that a single OVIP contain a single key proposal or new idea. The more focused the OVIP, the more successful it tends to be. If in doubt, split your OVIP into several well-focused ones.
+1. Community discussion. Discussing an idea publicly in the OpenVASP Community Forum (https://community.openvasp.org) is a good way to get a sense of acceptance and relevance of the idea. It is highly recommended that a single OVIP contain a single key proposal or new idea. The more focused the OVIP, the more successful it tends to be. If in doubt, split your OVIP into several well-focused ones.
 
 2. Intial OVIP. After discussing the idea and being able to formulate it clearly and precisesly, the author should create a formal OVIP following the format specified below. When the intital version is complete, create a PR. 
 
 3. Iterative improvment. The PR will be reviewed by the maintainers and might be deferred without reasoning if the format is not as specified, or might be deferred with improvement proposals. 
 
-4. Acceptance, Rejection or Counterproposal. Once the OVIP is in a formally good state the PR will be merged and the OVIP will be added to the repository in status "Proposal". In their next meeting, the OpenVASP member committee will consider all OVIPs with status "Proposal" and decide whether the OVIP will be accepted (=> status "Accepted"), rejected (=> status "Rejected") or whether it needs further refinement (=> status "Deferred").
+4. Recommendation, Rejection or Counterproposal. Once the OVIP is in a formally good state the PR will be merged and the OVIP will be added to the repository in status "Proposal". In their next meeting, the OpenVASP Standards Committee will consider all OVIPs with status "Proposal" and decide whether the OVIP will be recommended for a vote (=> status "Recommended"), rejected (=> status "Rejected") or whether it needs further refinement (=> status "Deferred").
 
-5. Re-submition. OVIPs in status "Deferred" can be re-submitted via PR. When the PR is merged the status will be ste back to "Proposal".
+5. Acceptance. OVIPs in status "Recommended" are presented for a vote to all voting members of the OpenVASP Association. They are either accepted (=> status "Accepted") or sent back to the OpenVASP Standards Committee for revision.
 
-6. Finalization. Once an OVIP is activated in the network, it's status will change to "Acive". From this it follows that each OVIP in state "Active" must reference a reference implementation.
+6. Re-submition. OVIPs in status "Deferred" can be re-submitted via PR. When the PR is merged the status will be set back to "Proposal".
 
-7. Superseded. If a subsequent OVIP invalidates an existing OVIP. The status of the invalidated OVIP must change to "Superseded".
+7. Finalization. Once an OVIP has been implemented in at least one reference implementation, its status will change to "Active". From this it follows that each OVIP in state "Active" must reference a reference implementation.
+
+8. Superseded. If a subsequent OVIP invalidates an existing OVIP. The status of the invalidated OVIP must change to "Superseded".
 
 ==What belongs in a successful OVIP?==
 
@@ -83,8 +85,7 @@ Each OVIP must begin with an RFC 822 style header preamble. The headers must app
   Title: <OVIP title>
   Author: <list of authors' real names and optionally, email addrs>
 * Discussions-To: <email address>
-  Status: <Proposal | Active | Accepted | Deferred | Rejected |
-            Superseded>
+  Status: <Proposal | Recommended | Rejected | Deferred | Accepted | Active | Superseded>
   Type: <Standard | Technical Clearification | Testing | Process>
   Created: <date created on, in ISO 8601 (yyyy-mm-dd) format>
 * Post-History: <dates of postings to mailing list>
