--- a/OVIP-0002.md
+++ b/OVIP-0002.md
@@ -32,12 +32,12 @@ The VAAN consists of 24 hexadecimal characters and has the following parts:
 tt | rr | vvvvvvvv | cccccccccc | xx
 ```
 
-```
-t = VASP Code Type 	(2 characters, 8 bit)
-r = Reserved bits		(2 characters, 8 bit)
-v = VASP Code           (8 characters, 32 bit)
-c = Internal Identifier	  (10 characters, 40 bit)
-x = Check Digits			(2 characters, 8 bit)
+```pseudocode
+t = VASP Code Type      (2 characters, 8 bit)
+r = Reserved bits       (2 characters, 8 bit)
+v = VASP Code           (8 characters, 32 bit)
+c = Internal Identifier (10 characters, 40 bit)
+x = Check Digits        (2 characters, 8 bit)
 ```
 
 ##### 2.1.1. VASP Code Type
@@ -47,7 +47,7 @@ The VASP Code Type specifies how the VASP Code used in this VAAN was defined. It
 At this time only one VASP Code Type is defined:
 
 ```
-10:	VASP Code assigned by standardized OpenVASP Ethereum smart contract.
+10: VASP Code assigned by standardized OpenVASP Ethereum smart contract.
 ```
 
 ##### 2.1.2. Reserved Bits
