--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -66,7 +66,7 @@ getVaspCode(vaspContract:address): bytes8 {public}
 Returns the VASP Code that was assigned to the specified `vaspContract` by the Index Contract. If no entry is found in the internal mapping, an empty address (0x) is returned by the function.
 
 **Use Case:**  
-Called to get the VASP Contract which is uniquely assigned to a specific VASP Code.
+Called to get the VASP Code which is uniquely mapped to a given VASP Contract address.
 
 ## VASP Contract
 
