--- a/ovip-0005.md
+++ b/ovip-0005.md
@@ -4,7 +4,7 @@ Title: Session Restoration
 Author: Nika Gamkrelidze <nikoloz.gamkrelidze@lykke-business.ch>, Sergey Nesterov <sergey.nesterov@lykke-business.ch>, Ivelin Ivanov <ivelin.ivanov@lykke-business.ch>
 Discussions-To: https://community.openvasp.org/#narrow/stream/12-implement-.2F.20all/topic/failover.20strategies
 Status: Proposal
-Type: Standard
+Type: Technical Clearification
 Created: 2020-08-04
 ```
 
@@ -21,7 +21,7 @@ As a general rule, to be able to implement it, all clients will need to store se
 
 ### 1. Storing Session Info
 
-All session info should be stored and made available in case of need. It is noteworthy that from the tech perspective, that means that one transfer from the business perspective can consist of several sessions, for example one interrupted and one which took off from the previous one and finished the flow gracefully. In case the interrupted session needs to be revived and resumed, both parties should have a mechanism enabling them to do that, so no matter in what state the session was interrupted, it will be possible for them to resume communication. It means that since the moment of first setup of the session, all the necessary information for listening to the relevant Whisper topic and composing/decomposing messages should be handled and stored by the host for the possible further use.
+All session info should be stored and made available in case of need. It is noteworthy that from the tech perspective, that means that one transfer from the business perspective can consist of several sessions, for example one interrupted and one which took off from the previous one and finished the flow gracefully. In case the interrupted session needs to be revived and resumed, both parties should have a mechanism enabling them to do that, so no matter in what state the session was interrupted, it will be possible for them to resume communication. It means that since the moment of first setup of the session, all the necessary information for listening to the relevant Whisper topic and composing/decomposing messages should be handled and stored by the host for the possible further use. This is much needed for restoring sessions in case business or tech timeouts have occured (OVIP-0004).
 
 Let's imagine a flow along with OVIP-0004 to get a better feel of it:
 
