--- a/ovip-0005.md
+++ b/ovip-0005.md
@@ -19,14 +19,18 @@ This OVIP is needed to fix all possible flow issues in conjunction with OVIP-000
 
 As a general rule, to be able to implement it, all clients will need to store session info and persist it.
 
-### 1. Storing Session Info
+### 1. Introducing Interrupted state for Session
+
+In OVIP-0004 it is described how in case of thechnical or business timeout the session might go into an Interrupted state. This means that the client marks session as Interrupted and stops listening to session topic and sending messages to counterparty topic so the state is frozen. As of now, it means that in case both parties want to finalize the business process, they have to set up a new session and go through the whole flow from the beginning which will most likely be unnecessary. It would be nice to be able to revive the session and continue from where the process was interrupted, which is what this OVIP suggests. The improvements described in OVIP-0004 make sure this is possible and easy to implement due to message idempotency and acknowledgement steps described.
+
+### 2. Storing Session Info
 
 All session info should be stored and made available in case of need. It is noteworthy that from the tech perspective, that means that one transfer from the business perspective can consist of several sessions, for example one interrupted and one which took off from the previous one and finished the flow gracefully. In case the interrupted session needs to be revived and resumed, both parties should have a mechanism enabling them to do that, so no matter in what state the session was interrupted, it will be possible for them to resume communication. It means that since the moment of first setup of the session, all the necessary information for listening to the relevant Whisper topic and composing/decomposing messages should be handled and stored by the host for the possible further use. This is much needed for restoring sessions in case business or tech timeouts have occured (OVIP-0004).
 
 Let's imagine a flow along with OVIP-0004 to get a better feel of it:
 
 
-#### 1.1
+#### 3. Scenario
 ```
 OV settings:
 Termination message TTL: 10 min
