Change Checksum proposal to CRC-8/WCDMA

--- a/ovip-0002.md
+++ b/ovip-0002.md
@@ -64,7 +64,7 @@ Internal customer identifier assigned by the VASP, consisting of 10 hexadecimal 
 
 ##### 2.1.5. Check Digits
 
-Two hexadecimal characters representing an 8-bit Pearson hash as defined by RFC 3074 (https://tools.ietf.org/html/rfc3074).
+Two hexadecimal characters representing an 8-bit CRC-8/WCDMA. The generic CRC algorithm is well described at https://www.autosar.org/fileadmin/user_upload/standards/classic/4-3/AUTOSAR_SWS_CRCLibrary.pdf, the parameters for CRC-8/WCDMA can be found at https://users.ece.cmu.edu/~koopman/crc/crc8.html. The input for the checksum must be interpreted as a hex encoded byte array, not as a ASCII encoded string.
 
 ### 3. Processing Requirements
 
@@ -72,7 +72,7 @@ Two hexadecimal characters representing an 8-bit Pearson hash as defined by RFC 
 
 When printed or displayed, the VAAN should be expressed in groups of four characters separated by a single space and using lowercase letters for hexadecimal digits from a to f. This representation is called *human-readable format*.
 
-> Example:	1000 bb52 8777 e33b 0785 20d9
+> Example:	1000 bb52 8777 e33b 0785 209e
 
 #### 3.2. Transmission and Storage
 
@@ -82,7 +82,7 @@ The VAAN must be transmitted or stored without spaces and using lowercase letter
 ^[a-f0-9]{24}$
 ```
 
-> Example:	1000bb528777e33b078520d9
+> Example:	1000bb528777e33b0785209e
 
 #### 3.3. Reception
 
@@ -90,13 +90,13 @@ Besides the canonical format, implementations must accept spaces and uppercase l
 
 > Examples:
 >
-> 1000 bb52 8777 e33b 0785 20d9
+> 1000 bb52 8777 e33b 0785 209e
 >
-> 1 0 0 0 b b 5 2 8 7 7 7 e 3 3 b 0 7 8 5 2 0 d 9
+> 1 0 0 0 b b 5 2 8 7 7 7 e 3 3 b 0 7 8 5 2 0 9 e
 >
-> 1000 BB528777 E33B078520 D9
+> 1000 BB528777 E33B078520 9E
 >
-> 1000BB52 8777e33b078520d9
+> 1000BB52 8777e33b0785209e
 
 ### 4. Usage Requirements
 
