--- a/ovip-0002.md
+++ b/ovip-0002.md
@@ -122,7 +122,7 @@ VASPs can assign as many VAANs to one customer as they wish. Furthermore, VASPs 
 - Broad applicability -- The proposed VAAN format is available in almost any system and can be easily encoded, e.g. in smart contracts.
 - Error prevention -- VAANs are expected to be communicated between users in many different ways including error-prone channels such as email, in writing or verbally. The limited set of hex characters reduces the risk of confusion between similar characters along with the check digits.
 - Chosen length -- Given the importance of human-processing the VAAN should not be too long. The proposed length of 24 characters is similar to that of the International Bank Account Number (IBAN), while maintaining enough space for both the number of VASPs (4.3E9) as well as the number of VAANs per VASP (1.1E12).
-- Check digits -- The proposed Pearson hash function is fast and simple, but produces a single byte output that is strongly dependent on every byte of the input, also see https://en.wikipedia.org/wiki/Pearson_hashing.
+- Check digits -- The proposed CRC-8 algorithm is widely used. It is guarantueed to find all burst errors of length 8 (<=> single hex charachter) and has a Hemming Distance of 4 for the given message length.It only produces a single byte output that is strongly dependent on every byte of the input, also see https://en.wikipedia.org/wiki/Cyclic_redundancy_check.
 
 ## Backwards Compatibility
 
