--- a/ovip-0005.md
+++ b/ovip-0005.md
@@ -21,7 +21,7 @@ As a general rule, to be able to implement it, all clients will need to store se
 
 ### 1. Handling Interrupted state for Session
 
-In OVIP-0004 it is described how in case of thechnical or business timeout the session might go into an Interrupted state. This means that the client marks session as Interrupted and stops listening to session topic and sending messages to counterparty topic so the state is frozen. As of now, it means that in case both parties want to finalize the business process, they have to set up a new session and go through the whole flow from the beginning which will most likely be unnecessary. It would be useful to be able to revive the session and continue from where the process was interrupted, which is what this OVIP suggests. The improvements described in OVIP-0004 make sure this is possible and easy to implement due to message idempotency and acknowledgement steps described.
+In OVIP-0004 it is described how in case of thechnical or business timeout the session might go into an Interrupted state. This means that the client marks session as Interrupted and stops listening to session topic and sending messages to counterparty topic so the state is frozen. As of now, it means that in case both parties want to finalize the business process, they have to set up a new session and go through the whole flow from the beginning which will most likely be unnecessary. It would be useful to be able to revive the session and continue from where the process was interrupted, which is what this OVIP suggests. The session revival will be initiated by a human person (for example a compliance officer) in case of need. The improvements described in OVIP-0004 make sure this is possible and easy to implement due to message idempotency and acknowledgement steps described.
 
 ### 2. Storing Session Info
 
