--- a/ovip-0006.md
+++ b/ovip-0006.md
@@ -21,7 +21,7 @@ This OVIP is designed to address those issues.
 
 ### General Description
 
-I propose to remove all data duplicates, meaning that once the piece of data that isn't supposed to be changed during the session is sent ad recieved by counterparty, it isn't included in any following messages. For example, once OV (originator VASP) provides the Originator full name and VAAN through the Transfer Request to the BV (beneficiary VASP), they won't be included in Transfer Reply, Transfer Dispatch or Transfer Confirmation messages.
+I propose to remove all data duplicates, meaning that once the piece of data that isn't supposed to be changed during the session is sent and recieved by counterparty, it isn't included in any following messages. For example, once OV (originator VASP) provides the Originator full name and VAAN through the Transfer Request to the BV (beneficiary VASP), they won't be included in Transfer Reply, Transfer Dispatch or Transfer Confirmation messages.
 The proposed messages structure is described in the following paragraph (leaving Session Request and Session Reply as they are).
 
 ### Proposed messages structure
