--- a/ovip-0006.md
+++ b/ovip-0006.md
@@ -5,7 +5,7 @@ Author: Nika Gamkrelidze <nikoloz.gamkrelidze@lykke-business.ch>
 Discussions-To: https://community.openvasp.org/#narrow/stream/11-protocol-.2F.20messages/topic/data.20duplicates
 Status: Proposal
 Type: Standard
-Created: 2020-08-04
+Created: 2020-14-05
 ```
 
 ## Abstract
@@ -13,7 +13,7 @@ Created: 2020-08-04
 The current specification of message protocol is designed to make each message of the session self-sufficient with regards to the details of the transaction. Each time new piece of data is gathered, it migrates to the next logical message. This has some advantages, however there are several reasons to remove all data duplicates, some of the most important being:
 * Simplify the messages and define specific notificational function for each of them.
 * Simplify development as it is not a good practice to duplicate data in this manner as it could lead to misunderstandings in case data turns out to be different from message to message. It also promotes good style.
-* Increase bandwidth since PoW resources are in direct proportion to the size of the message.
+* Increase transport layer bandwidth since PoW resources are in direct proportion to the size of the message.
 
 This OVIP is designed to address those issues.
 
