--- a/ovip-0006.md
+++ b/ovip-0006.md
@@ -26,6 +26,8 @@ The proposed messages structure is described in the following paragraph (leaving
 
 ### Proposed messages structure
 
+Please note that Signature is deliberately removed from the tables as it is not a part of the protocol messages.
+
 #### Transfer Request
 
 | Level 1     | Level 2               | Name        | Type         | Mult. | Comment                             |
