Introduce Testnet Vasp Code Types

--- a/ovip-0002.md
+++ b/ovip-0002.md
@@ -43,11 +43,15 @@ x = Check Digits        (2 characters, 8 bit)
 ##### 2.1.1. VASP Code Type
 
 The VASP Code Type specifies how the VASP Code used in this VAAN was defined. It consists of 2 hexadecimal characters.
+VASP Code Types starting with an alphabetical character ([a-f]) are reserved to indicate testnet VAANs.
 
-At this time only one VASP Code Type is defined:
+List of VASP Code Types (continuously updated):
 
 ```
-10: VASP Code assigned by standardized OpenVASP Ethereum smart contract.
+Mainnet:
+10: VASP Code assigned by standardized OpenVASP Ethereum Mainnet smart contract with address 0xXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX (TBD).
+Testnet:
+f0: Testnet VASP Code assigned by OpenVASP Ethereum Mainnet smart contract with address 0xXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX (TBD).
 ```
 
 ##### 2.1.2. Reserved Bits
