Formatting after upload

--- a/ovip-0007.md
+++ b/ovip-0007.md
@@ -18,26 +18,26 @@ Text
 
 The OpenVASP protocol defines three layers to establish a structured communication between VASPs.
 
-**Message Layer**
+**Message Layer**</br>
 Functionality to send and receive asynchronous messages including routing, reliability and encryption. The protocol defines an interface description for messages as well an implementation for Ethereum Whisper.
 
-**Session Layer**
+**Session Layer**</br>
 Functionality to open, control and end the dialog between two VASPs, which is called a session.
 
-**Application Layer**
+**Application Layer**</br>
 Specific interaction flow between two VASPs in a session, e.g. agreeing on a virtual asset transfer and transmission of travel rule information according to FATF requirements.
 
 ## 2. Message Layer (Interface Description)
 
 ### 2.1. Definitions
 
-**Message**
+**Message**</br>
 Message conformant to the OpenVASP interface description given below.
 
-**Sender**
+**Sender**</br>
 VASP sending a *Message*.
 
-**Receiver**
+**Receiver**</br>
 VASP receiving a *Message*.
 
 ### 2.2. Message Structure
@@ -86,22 +86,22 @@ Implementations should ensure that feedback is provided to the *Sender* whether 
 
 ### 3.1. Definitions
 
-**Session**
+**Session**</br>
 Bidirectional exchange of functionally linked *Messages* between two VASPs.
 
-**Session Messages**
+**Session Messages**</br>
 *Messages* of specified types used to initiate, accept, decline, close and abort a *Session*.
 
-**Initiator**
+**Initiator**</br>
 VASP initiating a *Session*.
 
-**Responder**
+**Responder**</br>
 VASP responding to a *Session* initiation.
 
-**Exception**
+**Exception**</br>
 Error or unexpected event ocurring to one of the parties during a *Session*, e.g. receiving an incorrect *Message* or the absence of a response.
 
-**Exception Handling**
+**Exception Handling**</br>
 Process of observing and responding to an *Exception*.
 
 ### 3.2. Session Flow
@@ -265,10 +265,10 @@ The *Message* must contain the following elements in its `header` and `body` obj
 
 ### 4.1. Definitions
 
-**Application**
+**Application**</br>
 Structured interaction between VASPs for a dedicated purpose, e.g. agreeing on a virtual asset transfer and transmitting the related travel rule information. Defined by a set of *Application Massages*.
 
-**Application Message**
+**Application Message**</br>
 *Message* with a defined set of elements to support the flow of *Messages* needed for an *Application*.
 
 ### 4.2. Specification Rules for Application Messages
