Further edits before PR

--- a/ovip-0007.md
+++ b/ovip-0007.md
@@ -2,7 +2,7 @@
 OVIP: 7
 Title: Message Layer Interface & Session Model
 Author: David Riegelnig <david.riegelnig@bitcoinsuisse.com>
-Discussions-To:
+Discussions-To: https://community.openvasp.org/#narrow/stream/21-protocol-.2F.20ovip
 Status: Proposal
 Type: Standard
 Created: 2020-05-25
@@ -10,7 +10,7 @@ Created: 2020-05-25
 
 # Abstract
 
-Text
+This OVIP rewrites major parts of the OpenVASP protocol by introducing a three-layer model (message/session/application). The message structure is streamlined and redefined as an interface to better abstract from the messaging layer. A more formal session state model is introduced along with the ability to abort running sessions. Rules for application messages ensure consistency for protocol extensions.
 
 # Specification
 
@@ -47,9 +47,9 @@ VASP receiving a *Message*.
 | Level 1   | Level 2 | Name      | Type   | Description                                    |
 | --------- | ------- | --------- | ------ | ---------------------------------------------- |
 | Content   |         | `content` | Object |                                                |
-|           | Header  | `header`  | Object | See 2.2.1.1                                    |
+|           | Header  | `header`  | Object | See 2.2.1                                    |
 |           | Body    | `body`    | Object | Defined on Session Layer and Application Layer |
-| Signature |         | `sig`     | String | See 2.2.1.2                                    |
+| Signature |         | `sig`     | String | See 2.2.2                                    |
 
 #### 2.2.1 Header
 
@@ -72,7 +72,7 @@ The value assigned to `sig` is the cryptographic signature of the `content` obje
 
 *Messages* must be encrypted for transmission, either at the message level or at the transport level.
 
-Encryption can be asymmetric or symmetric using a shared secret established over an insecure channel (Diffie–Hellman key exchange). In both cases the public `handshakeKey` should be used, which is available from the *Receiver's* VASP Contract, which is retrieved from the Index Contract using the *Receiver's* VASP Code (value assigned to `receiver`).
+Encryption can be asymmetric or symmetric using a shared secret established over an insecure channel (Diffie–Hellman key exchange). In both cases the public `handshakeKey` from the *Receiver's* VASP Contract should be used, which is itself retrieved from the Index Contract using the *Receiver's* VASP Code (value assigned to `receiver`).
 
 ### 2.4. Message Routing
 
@@ -87,7 +87,7 @@ Implementations should ensure that feedback is provided to the *Sender* whether 
 ### 3.1. Definitions
 
 **Session**</br>
-Bidirectional exchange of functionally linked *Messages* between two VASPs.
+Bidirectional exchange of related *Messages* between two VASPs.
 
 **Session Messages**</br>
 *Messages* of specified types used to initiate, accept, decline, close and abort a *Session*.
@@ -108,7 +108,7 @@ Process of observing and responding to an *Exception*.
 
 #### 3.2.1. Session States
 
-A *Session* can exist in several states as listed in the table below. Given the asynchronous nature of exchanged *Messages*, the *Session* states of the *Initiator* and the *Responder* will temporarily differ until state-changing *Messages* are received. In case of an *Exception*, *Sessions* can end in different states for the two VASPs.
+A *Session* can exist in several states as listed in the table below. Given the asynchronous nature of exchanged *Messages*, the *Session* states of the *Initiator* and the *Responder* will temporarily differ until state-changing *Messages* are received. In case of an *Exception*, the *Sessions* of the two VASPs can end in different states.
 
 | State       | Description                                                  | Applicable to        |
 | ----------- | ------------------------------------------------------------ | -------------------- |
@@ -196,7 +196,7 @@ When receiving a `Session Abort` *Message* from the *Responder*, the *Initiator'
 
 ### 3.3. Session Messages
 
-*Session Messages* are a subset of all *Messages* and therefore conformant with the interface description specified in 2.2 of this document. Additional attributes for the four *Session Message* types are hereinafter specified.
+*Session Messages* are a subset of *Messages* and therefore conformant with the interface description specified in 2.2 of this document. Additional attributes for the four *Session Message* types are hereinafter specified.
 
 #### 3.3.1. Session Request
 
@@ -299,21 +299,21 @@ The first *Application Message* sent within a *Session* defines the *Application
 
 # Motivation
 
-**Edge Cases** -- The protocol flow in the OpenVASP White Paper did not consider failure situations arising from unrealiable communication.
+**Edge Cases** -- The protocol flow in the OpenVASP White Paper did not consider failure situations arising from unreliable communication.
 
 **Incomplete session state model** -- No formal state model was specified for OpenVASP sessions, resulting in interoperability issues between different implementations. 
 
-**Better Abstraction from transport layer** -- In line with the ambition to allow for protocol implementation on top of different messaging systems, this OVIP better abstracts the specification of OpenVASP messages from actual implementations (e.g. Whisper).
+**Better Abstraction from transport layer** -- In line with the ambition to allow for protocol implementation on top of different messaging systems, this OVIP better abstracts the specification of OpenVASP messages and the session model from actual implementations (e.g. Whisper).
 
 # Rationale
 
-**Three-layer model** -- Text.
+**Three-layer model** -- Specification uses layer terminology often used in system design.
 
-**Joint message interface** -- Text.
+**Joint message interface** -- Proposed specification is a targeted revision of the OpenVASP White Paper. New `header` object streamlines meta data required in each message. The two-part structure of the message (content/signature) makes it clearer.
 
-**Session state model** -- Text.
+**Session state model** -- Suggested state model remains straightforward and close to the original proposal.
 
-**Ability to abort sessions** -- Text.
+**Session Aborts** -- The ability to abort sessions was not available so far, but it was identified as an important feature to react to exceptions and operational issues.
 
 # Backwards Compatibility
 
