--- a/ovip-0009.md
+++ b/ovip-0009.md
@@ -37,7 +37,7 @@ Abstraction of how message are transported from A to B. For detailed description
 Abstraction of how to refer to the intended receiver of a message. Check section 4.3 of the original [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1) and [ovip-0002](https://github.com/OpenVASP/ovips/blob/master/ovip-0002.md#213-vasp-code).
 
 **Transport**
-Provides abstractions and guarantees around messages. Comparable to TCP/UDP in the internet stack. For more details refer to [RLPX](https://github.com/ethereum/devp2p/blob/master/rlpx.md).
+Provides abstractions and guarantees around messages. Comparable to TCP/UDP in the internet stack. For more details refer to [ovip-0008]() .
 
 **Authentication**
 Creates a reliable link between a VAAN (Identifier, [ovip-0002](https://github.com/OpenVASP/ovips/blob/master/ovip-0002.md)) and a VASP (legal entity). For more details refer to [ovip-0003](https://github.com/OpenVASP/ovips/blob/master/ovip-0003.md).
