--- a/ovip-0009.md
+++ b/ovip-0009.md
@@ -24,7 +24,7 @@ The advantage of a layered model is the modularity that it provides. By decoupli
 | 6     | Application    | State machine and interpretation of messages. | [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1) | Travel Rule            |
 | 5     | Session        | Provides context to a set of messages.        | [ovip-0007]()                                                | Session Model          |
 | 4     | Authentication | VASP authentication.                          | [ovip-0003](https://github.com/OpenVASP/ovips/blob/master/ovip-0003.md) | Index + Dictionary     |
-| 3     | Transport      | Message reliability.                          | [ovip-0008]()                                                | RLPx                   |
+| 3     | Transport      | Message reliability.                          | [ovip-0008]()                                                | -                   |
 | 2     | Routing        | Means of addressing receiver.                 | [ovip-0002](https://github.com/OpenVASP/ovips/blob/master/ovip-0002.md#213-vasp-code) | VASP Code              |
 | 1     | Messaging      | Means of sending a message.                   | [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1) | Whisper                |
 
