--- a/ovip-0009.md
+++ b/ovip-0009.md
@@ -19,33 +19,33 @@ The advantage of a layered model is the modularity that it provides. By decoupli
 
 ## 2. Overview of Layers
 
-| Layer | Name           | Purpose                                       | Reference                                                    | Current Implementation |
-| ----- | -------------- | --------------------------------------------- | ------------------------------------------------------------ | ---------------------- |
-| 6     | Application    | State machine and interpretation of messages. | [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1) | Travel Rule            |
-| 5     | Session        | Provides context to a set of messages.        | [ovip-0007]()                                                | Session Model          |
-| 4     | Authentication | VASP authentication.                          | [ovip-0003](https://github.com/OpenVASP/ovips/blob/master/ovip-0003.md) | Index + Dictionary     |
-| 3     | Transport      | Message reliability.                          | [ovip-0008]()                                                | -                   |
-| 2     | Routing        | Means of addressing receiver.                 | [ovip-0002](https://github.com/OpenVASP/ovips/blob/master/ovip-0002.md#213-vasp-code) | VASP Code              |
-| 1     | Messaging      | Means of sending a message.                   | [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1) | Whisper                |
+| Layer | Interface Name   | Purpose                                       | Reference                                                    | Current Implementation |
+| ----- | ---------------- | --------------------------------------------- | ------------------------------------------------------------ | ---------------------- |
+| 6     | Application      | State machine and interpretation of messages. | [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1) | Travel Rule            |
+| 5     | Business Session | Provides context to a set of messages.        | [ovip-0007]()                                                | VASP Session           |
+| 4     | Authentication   | VASP authentication & authorization.          | [ovip-0003](https://github.com/OpenVASP/ovips/blob/master/ovip-0003.md) | Index + Dictionary     |
+| 3     | Transport        | Message reliability.                          | [ovip-0008]()                                                | Whisper Session        |
+| 2     | Addressing       | Means of addressing receiver.                 | [ovip-0002](https://github.com/OpenVASP/ovips/blob/master/ovip-0002.md#213-vasp-code) | VASP Code              |
+| 1     | Messaging        | Means of sending a message.                   | [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1) | Whisper                |
 
 ## 3. Description of Layers
 
 **Messaging Layer**
 Abstraction of how message are transported from A to B. For detailed description refer to Section 3 of the original [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1).
 
-**Routing**
+**Addressing Layer** 
 Abstraction of how to refer to the intended receiver of a message. Check section 4.3 of the original [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1) and [ovip-0002](https://github.com/OpenVASP/ovips/blob/master/ovip-0002.md#213-vasp-code).
 
-**Transport**
-Provides abstractions and guarantees around messages. Comparable to TCP/UDP in the internet stack. For more details refer to [ovip-0008]() .
+**Transport Layer**
+Provides abstractions and guarantees around messages. Comparable to TCP/UDP in the internet stack. For our current implementation refer to [ovip-0008]().
 
-**Authentication**
+**Authentication Layer**
 Creates a reliable link between a VAAN (Identifier, [ovip-0002](https://github.com/OpenVASP/ovips/blob/master/ovip-0002.md)) and a VASP (legal entity). For more details refer to [ovip-0003](https://github.com/OpenVASP/ovips/blob/master/ovip-0003.md).
 
-**Session**
-Responsible for creating a session between to VASPs, not only on a technical but also on a business level. This provides context to a set of messages. For more details refer to Sections 6.2 and 6.3 of the original  [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1) which has been refined by [ovip-0007]().
+**Business Session Layer**
+Responsible for creating a session between to VASPs, not only on a technical but also on a business level. This provides context to a set of messages and ensures auditability of all messages send within one session. For more details refer to Sections 6.2 and 6.3 of the original  [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1) which has been refined by [ovip-0007]().
 
-**Application**
+**Application Layer**
 Responsible for handling application level state transitions and defining corresponding messages. Comparable to the Application Layer of the internet stack. Our sole initial application will be the implementation of the travel rule as described in Sections 6.4-6.8 of the original  [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1).
 
 # 4. Motivation
@@ -55,4 +55,3 @@ We desire to provide a framework for clearer communication and provide a basis f
 # 5. Backwards Compatibility
 
 There are no protocol changes described in this OVIP. It merely provides a framework of reasoning about already existing and future proposals.
-
