Minor updates to Encryption & Authenticity

--- a/ovip-0009.md
+++ b/ovip-0009.md
@@ -37,13 +37,13 @@ Abstraction of how message are transported from A to B. For detailed description
 Abstraction of how to refer to the intended receiver of a message. Check section 4.3 of the original [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1) and [ovip-0002](https://github.com/OpenVASP/ovips/blob/master/ovip-0002.md#213-vasp-code).
 
 **Transport Layer**
-Provides abstractions and guarantees around messages. Comparable to TCP/UDP in the internet stack. For our current implementation refer to [ovip-0008]().
+Provides abstractions and guarantees around messages. Comparable to TCP/UDP in the internet stack. *Should* ensure message reliability and encryption. For our current implementation refer to [ovip-0008]().
 
 **Authentication Layer**
 Creates a reliable link between a VAAN (Identifier, [ovip-0002](https://github.com/OpenVASP/ovips/blob/master/ovip-0002.md)) and a VASP (legal entity). For more details refer to [ovip-0003](https://github.com/OpenVASP/ovips/blob/master/ovip-0003.md).
 
 **Business Session Layer**
-Responsible for creating a session between to VASPs, not only on a technical but also on a business level. This provides context to a set of messages and ensures auditability of all messages send within one session. For more details refer to Sections 6.2 and 6.3 of the original  [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1) which has been refined by [ovip-0007]().
+Responsible for creating a session between to VASPs, not only on a technical but also on a business level. This provides context to a set of messages and ensures authenticity and auditability of all messages send within one session. For more details refer to Sections 6.2 and 6.3 of the original  [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1) which has been refined by [ovip-0007]().
 
 **Application Layer**
 Responsible for handling application level state transitions and defining corresponding messages. Comparable to the Application Layer of the internet stack. Our sole initial application will be the implementation of the travel rule as described in Sections 6.4-6.8 of the original  [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1).
