--- a/ovip-0009.md
+++ b/ovip-0009.md
@@ -34,7 +34,7 @@ The advantage of a layered model is the modularity that it provides. By decoupli
 Abstraction of how message are transported from A to B. For detailed description refer to Section 3 of the original [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1).
 
 **Addressing Layer** 
-Abstraction of how to refer to the intended receiver of a message. Check section 4.3 of the original [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1) and [ovip-0002](https://github.com/OpenVASP/ovips/blob/master/ovip-0002.md#213-vasp-code).
+Abstraction of how to refer to the intended receiver of a message and method of exchanges public keys used for encryption on higher Layers. Check section 4.3 of the original [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1) and [ovip-0002](https://github.com/OpenVASP/ovips/blob/master/ovip-0002.md#213-vasp-code).
 
 **Transport Layer**
 Provides abstractions and guarantees around messages. Comparable to TCP/UDP in the internet stack. *Should* ensure message reliability and encryption. For our current implementation refer to [ovip-0008]().
