--- a/ovip-0009.md
+++ b/ovip-0009.md
@@ -25,7 +25,7 @@ The advantage of a layered model is the modularity that it provides. By decoupli
 | 5     | Business Session | Provides context to a set of messages.        | [ovip-0007]()                                                | VASP Session           |
 | 4     | Authentication   | VASP authentication & authorization.          | [ovip-0003](https://github.com/OpenVASP/ovips/blob/master/ovip-0003.md) | VASP Code Dictionary     |
 | 3     | Transport        | Message reliability.                          | [ovip-0008]()                                                | Whisper Session        |
-| 2     | Addressing       | Means of addressing receiver.                 | [ovip-0002](https://github.com/OpenVASP/ovips/blob/master/ovip-0002.md#213-vasp-code) | VASP Code Index             |
+| 2     | Addressing       | Means of addressing receiver.                 | [ovip-0003](https://github.com/OpenVASP/ovips/blob/master/ovip-0003.md) | VASP Code Index             |
 | 1     | Messaging        | Means of sending a message.                   | [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1) | Whisper                |
 
 ## 3. Description of Layers
