Introduce VASP Identifier

--- a/ovip-0002.md
+++ b/ovip-0002.md
@@ -60,7 +60,7 @@ Two hexadecimal characters reserved for future use. Must be zero ('00').
 
 ##### 2.1.3. VASP Code
 
-Unique identifier for the Virtual Assets Service Provider (VASP) who has assigned the VAAN to one of its customers. The VASP Code consists of 8 hexadecimal characters.
+Unique identifier for the Virtual Assets Service Provider (VASP) given a specific VASP Code Type, who has assigned the VAAN to one of its customers. The VASP Code consists of 8 hexadecimal characters.
 
 ##### 2.1.4. Internal Identifier
 
@@ -69,6 +69,10 @@ Internal customer identifier assigned by the VASP, consisting of 10 hexadecimal 
 ##### 2.1.5. Check Digits
 
 Two hexadecimal characters representing an 8-bit CRC-8/WCDMA. The generic CRC algorithm is well described at https://www.autosar.org/fileadmin/user_upload/standards/classic/4-3/AUTOSAR_SWS_CRCLibrary.pdf, the parameters for CRC-8/WCDMA can be found at https://users.ece.cmu.edu/~koopman/crc/crc8.html. The input for the checksum must be interpreted as a hex encoded byte array, not as a ASCII encoded string.
+
+##### 2.1.6. VASP Identifier
+
+The VASP Identfier is the implicit combination of the VASP Code Type and the VASP Code. It uniquely, globally identifies a VASP.
 
 ### 3. Processing Requirements
 
