Additional changes according to new layer model

--- a/ovip-0007.md
+++ b/ovip-0007.md
@@ -5,12 +5,12 @@ Author: David Riegelnig <david.riegelnig@bitcoinsuisse.com>
 Discussions-To: https://community.openvasp.org/#narrow/stream/21-protocol-.2F.20ovip
 Status: Proposal
 Type: Standard
-Created: 2020-05-25
+Created: 2020-05-28
 ```
 
 # Abstract
 
-This OVIP rewrites major parts of the OpenVASP protocol by introducing a three-layer model (message/session/application). The message structure is streamlined and redefined as an interface to better abstract from the messaging layer. A more formal session state model is introduced along with the ability to abort running sessions. Rules for application messages ensure consistency for protocol extensions.
+This OVIP refines the session layer of the OpenVASP protocol. The message structure is streamlined and redefined to better abstract from lower protocol layers. A more formal session state model is introduced along with the ability to abort running sessions. Rules for application messages ensure consistency for protocol extensions.
 
 # Specification
 
@@ -236,7 +236,7 @@ The *Message* must contain the following elements in its `header` and `body` obj
 | `4`        | Temporary disruption of service   |
 | `5`        | Unspecified                       |
 
-## 5. Application Layer
+## 5. Application Messages
 
 ### 5.1. Definitions
 
@@ -248,9 +248,9 @@ Structured interaction between VASPs for a dedicated purpose, e.g. agreeing on a
 
 ### 5.2. Specification Rules for Application Messages
 
-#### 5.2.1. Conformance with Message Interface
+#### 5.2.1. Conformance with Message Structure
 
-Each `Application Message` must be conformant with the interface description for all *Messages* as specified in 2.2 of this document.
+Each `Application Message` must be conformant with the structure specified for all *Messages* in 2.2 of this document.
 
 #### 5.2.2. Unique Message Type
 
