Minor updates to ovip-9

--- a/ovip-0009.md
+++ b/ovip-0009.md
@@ -23,9 +23,9 @@ The advantage of a layered model is the modularity that it provides. By decoupli
 | ----- | ---------------- | --------------------------------------------- | ------------------------------------------------------------ | ---------------------- |
 | 6     | Application      | State machine and interpretation of messages. | [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1) | Travel Rule            |
 | 5     | Business Session | Provides context to a set of messages.        | [ovip-0007]()                                                | VASP Session           |
-| 4     | Authentication   | VASP authentication & authorization.          | [ovip-0003](https://github.com/OpenVASP/ovips/blob/master/ovip-0003.md) | VASP Code Dictionary     |
+| 4     | Authentication   | VASP authentication & authorization.          | [ovip-0003](https://github.com/OpenVASP/ovips/blob/master/ovip-0003.md) | VASP Dictionary     |
 | 3     | Transport        | Message reliability.                          | [ovip-0008]()                                                | Whisper Session        |
-| 2     | Addressing       | Means of addressing receiver.                 | [ovip-0003](https://github.com/OpenVASP/ovips/blob/master/ovip-0003.md) | VASP Code Index             |
+| 2     | Addressing       | Means of addressing receiver.                 | [ovip-0003](https://github.com/OpenVASP/ovips/blob/master/ovip-0003.md) | VASP Index             |
 | 1     | Messaging        | Means of sending a message.                   | [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1) | Whisper                |
 
 ## 3. Description of Layers
@@ -40,7 +40,7 @@ Abstraction of how to refer to the intended receiver of a message and method of 
 Provides abstractions and guarantees around messages. Comparable to TCP/UDP in the internet stack. *Should* ensure message reliability and encryption. For our current implementation refer to [ovip-0008]().
 
 **Authentication Layer**
-Creates a reliable link between a VAAN (Identifier, [ovip-0002](https://github.com/OpenVASP/ovips/blob/master/ovip-0002.md)) and a VASP (legal entity). For more details refer to [ovip-0003](https://github.com/OpenVASP/ovips/blob/master/ovip-0003.md).
+Creates a reliable link between a VASP Identifier (Identifier, [ovip-0002](https://github.com/OpenVASP/ovips/blob/master/ovip-0002.md)) and a VASP (legal entity). For more details refer to [ovip-0003](https://github.com/OpenVASP/ovips/blob/master/ovip-0003.md).
 
 **Business Session Layer**
 Responsible for creating a session between to VASPs, not only on a technical but also on a business level. This provides context to a set of messages and ensures authenticity and auditability of all messages send within one session. For more details refer to Sections 6.2 and 6.3 of the original  [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1) which has been refined by [ovip-0007]().
