Adding ovip-0009 to README

--- a/README.mediawiki
+++ b/README.mediawiki
@@ -40,6 +40,13 @@ We thank the Bitcoin community for introducing this process to handle standard i
 | Nika Gamkrelidze
 | Standard
 | Proposal
+|-
+| [[ovip-0004.md|4]]
+|
+| 6 Layers of OpenVASP
+| Felix Laufenberg
+| Standard
+| Proposal
 |}
 
 <!-- IMPORTANT!  See the instructions at the top of this page, do NOT JUST add OVIPs here! -->
