--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -22,34 +22,34 @@ The online documentation about the Whisper protocol can be found here: https://g
 
 ## 2. Definitions
 
-**Node**
+**Node**</br>
 System operating a Whisper node implementing the transport layer for the OpenVASP protocol.
 
-**Connection**
+**Connection**</br>
 Two *Nodes* sharing a common identifier representing a connection and an associated shared secret, which can be used to exchange encrypted messages. Both *Nodes* have sent each other a Whisper topic to be used to send messages related to this connection.
 
-**Active Node**
+**Active Node**</br>
 *Node* inviting another node to establish a *Connection*.
 
-**Passive Node**
+**Passive Node**</br>
 *Node* responding to an invitation, either accepting or denying the *Connection*.
 
-**Initiator**
+**Initiator**</br>
 VASP operating the *Active Node*.
 
-**Responder**
+**Responder**</br>
 VASP operating the *Passive Node*.
 
-**Envelope**
+**Envelope**</br>
 Envelopes are the packets sent and received by Whisper nodes. They contain the encrypted *Message* and metadata for decryption.
 
-**Message**
+**Message**</br>
 Message part of an *Envelope*, containing the message *Payload*, metadata and optional signature. Not to be confused with OpenVASP Messages, which are defined on the higher Session Layer.
 
-**Payload**
+**Payload**</br>
 Actual message payload within a *Message* transmitted by an *Envelope*.
 
-**OpenVASP Envelope Type**
+**OpenVASP Envelope Type**</br>
 Envelope type with a defined structure on *Envelope*, *Message* and *Payload* level. The full set of Envelope Types implements the transport layer for the OpenVASP protocol.
 
 ## 3. Envelope Level
