--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -253,13 +253,11 @@ Text missing
 
 # Motivation
 
-**Better Abstraction from transport layer** -- In line with the ambition to allow for protocol implementation on top of different messaging systems, this OVIP better abstracts the specification of OpenVASP messages from actual implementations (e.g. Whisper).
+**Alignment with new layer model** -- Text.
 
 # Rationale
 
 **Transport layer reliability** -- Text.
-
-**Alignment with changes made on session layer** -- Text.
 
 **New transportKey** -- Text.
 
