--- a/ovip-0009.md
+++ b/ovip-0009.md
@@ -22,9 +22,9 @@ The advantage of a layered model is the modularity that it provides. By decoupli
 | Layer | Interface Name   | Purpose                                       | Reference                                                    | Current Implementation |
 | ----- | ---------------- | --------------------------------------------- | ------------------------------------------------------------ | ---------------------- |
 | 6     | Application      | State machine and interpretation of messages. | [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1) | Travel Rule            |
-| 5     | Business Session | Provides context to a set of messages.        | [ovip-0007]()                                                | VASP Session           |
+| 5     | Business Session | Provides context to a set of messages.        | [ovip-0007](https://github.com/OpenVASP/ovips/blob/master/ovip-0007.md)                                                | VASP Session           |
 | 4     | Authentication   | VASP authentication & authorization.          | [ovip-0003](https://github.com/OpenVASP/ovips/blob/master/ovip-0003.md) | VASP Dictionary     |
-| 3     | Transport        | Message reliability.                          | [ovip-0008]()                                                | Whisper Session        |
+| 3     | Transport        | Message reliability.                          | [ovip-0010](https://github.com/OpenVASP/ovips/blob/master/ovip-0010.md)                                                | Whisper Session        |
 | 2     | Addressing       | Means of addressing receiver.                 | [ovip-0003](https://github.com/OpenVASP/ovips/blob/master/ovip-0003.md) | VASP Index             |
 | 1     | Messaging        | Means of sending a message.                   | [Whitepaper](https://www.openvasp.org/wp-content/uploads/2019/11/OpenVasp_Whitepaper.pdf?cache=1) | Whisper                |
 
