--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -243,13 +243,15 @@ Besides the general specifications given on *Envelope*, *Message* and *Payload* 
 
 ## 6. Expected Node Behavior
 
-### 6.1. Connections
+### 6.1. Sending ACK
 
-Text missing
+*Nodes* must acknowledge the receipt of an each *Envelope* containing the *OpenVASP Payload* by sending an OpenVASP *Envelope* of type ACK. The only exception are *Envelopes* of type ACK, which must not be acknowledged.
 
-### 6.2. TTL
+### 6.2. Responding to a missing ACK
 
-Text missing
+*Nodes* must resend an *Envelope*, for which they do not receive an ACK within the period specified in its time-to-live (TTL).
+
+*Nodes* should resend *Envelopes* not being acknowledged with increasingly larger TTL values (e.g. doubling the TTL with each resend).
 
 # Motivation
 
