--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -113,7 +113,7 @@ The `instruction` element can have the following values:
 | `101` | CLOSE  | Active or passive node | Closing a Connection                | 5.5  |
 | `000` | ACK    | Active or passive node | Acknowledge *Message* receipt       | 5.6  |
 
-## 5. OpenVASP Envelope Types
+## 5. Implementing the Session Layer
 
 Six *OpenVASP Envelopes Types* are defined to implement the transport layer for the OpenVASP protocol. They are reflected by the six values of the `instruction` element (see 4.1.1) and are specified below.
 
@@ -121,15 +121,19 @@ Six *OpenVASP Envelopes Types* are defined to implement the transport layer for 
 
 1. Input: Session Request Message JSON as specified in OVIP-7, section 4.1 (`sessionMessage`) containing the `receiver`.
 
-2. Generate random `connectionIdentifier`.
+2. Retrieve
 
-3. Generate random `topicA` the *Active Node* will listen for to identify incoming *Envelope* sent over the *Connection*.
+3. Generate random `connectionIdentifier`.
 
-4. Generate ECDH private key (`ecdhPrivate`) and ECDH public key (`ecdhPublic`) based on the elliptic curve Diffie–Hellman (ECDH) key-exchange protocol.
+4. Generate random `topicA` the *Active Node* will listen for to identify incoming *Envelope* sent over the *Connection*.
 
-5. Derive `sharedKey` based on the public `transportKey` available from the `receiver`'s' VASP Contract and `ecdhPublic` generated in the previous step.
+5. Generate ECDH private key (`ecdhPrivate`) and ECDH public key (`ecdhPublic`) based on the elliptic curve Diffie–Hellman (ECDH) key-exchange protocol.
 
-6. Create the OpenVASP *Payload* out of the elements defined in 4.1 and the specified values in the table below.</br>
+6. Derive `sharedKey` based on the public `transportKey` available from the `receiver`'s' VASP Contract and `ecdhPublic` generated in the previous step.
+
+7. 
+
+8. Create the OpenVASP *Payload* out of the elements defined in 4.1 and the specified values in the table below.</br>
 
    | Element       | Length         | Value                  |
    | :------------ | :------------- | :--------------------- |
@@ -141,7 +145,7 @@ Six *OpenVASP Envelopes Types* are defined to implement the transport layer for 
 
    
 
-7. Create the Envelope out of the elements defined in 3. and the specified values in the table below.</br>
+9. Create the Envelope out of the elements defined in 3. and the specified values in the table below.</br>
 
    | Element | Value / Specification                                        |
    | :------ | :----------------------------------------------------------- |
@@ -150,7 +154,7 @@ Six *OpenVASP Envelopes Types* are defined to implement the transport layer for 
 
    </br>
 
-8. 
+10. 
 
 ### 5.1. INVITE
 
